# rust-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  clippy.toml  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  workspace-migration.md
docs/plans/: 2025-12-17-rust-hexagonal-template-design.md
examples/cli-tool/: Cargo.toml  README.md
examples/cli-tool/src/: main.rs  types.rs
examples/web-api/: Cargo.toml  README.md
examples/web-api/src/: app_state.rs  error.rs  handlers.rs  main.rs  routes.rs
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/inbound/: mod.rs
src/adapters/inbound/cli/: mod.rs
src/adapters/inbound/http/: mod.rs
src/adapters/outbound/: mod.rs
src/adapters/outbound/persistence/: in_memory.rs  mod.rs
src/config/: mod.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: mod.rs  user.rs
src/domain/ports/: mod.rs  repositories.rs  services.rs
src/domain/services/: mod.rs  user_service.rs
tests/api/: mod.rs  user_repository_tests.rs
